[FEATURE] Configurable routes in site configuration
* extend site configuration (language) with login and logout route
* add empty `ext_conf_template.txt` to make extension config work
* add data processor to add login and logout URIs to page template
* adjust middlewares to use configurable routes

--- a/Resources/Private/Language/locallang_backend.xlf
+++ b/Resources/Private/Language/locallang_backend.xlf
@@ -6,6 +6,16 @@
             <trans-unit id="fe_users.role_name">
                 <source>Role name</source>
             </trans-unit>
+
+            <trans-unit id="site_language.palettes.jwt-sso">
+                <source>SSO routes</source>
+            </trans-unit>
+            <trans-unit id="site_language.login_route">
+                <source>Login route</source>
+            </trans-unit>
+            <trans-unit id="site_language.logout_route">
+                <source>Logout route</source>
+            </trans-unit>
         </body>
     </file>
 </xliff>
